@@ -24,6 +24,8 @@ Slated for 2.21.0
   sortFrom(T[], int, Comparator<T>)
 - Added: Pair.set(int, int), Pair.set(Pair).
 - Added: Common.set/getLocal(Object).
+- Added: Sorting/searching functions in AbstractVector. Changed functions in
+  ComparatorList and SortedList to use them.
 
 Changed in 2.20.2
 =================
